--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "twig.js"
   ],
   "scripts": {
-    "test": "standard"
+    "test": "standard && node test/test"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "homepage": "https://github.com/techteamer/twigify",
   "author": "TechTeamer",
   "bugs": "https://github.com/techteamer/twigify/issues",
@@ -28,7 +28,10 @@
     "twig": "^0.7.2"
   },
   "devDependencies": {
-    "standard": "^13.1.0"
+    "browserify": "^16.5.0",
+    "browserify-string": "^1.1.1",
+    "standard": "^13.1.0",
+    "tap": "^14.6.1"
   },
   "engines": {
     "node": ">=0.10"
